# machine-learning-zoomcamp

./: .gitignore  Dockerfile  README.md  Week 1.ipynb  after-sign-up.md  appendix-a-setup-docker.md  appendix-b-python.ipynb  appendix-c-numpy.ipynb  appendix-d-pandas.ipynb  asking-questions.md  bento.md  cerficates.md  certificates.md  generate-description.ipynb  learning-in-public.md  main.py  pyproject.toml  testquest  useful_code.py
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
01-intro/: 01-intro.ipynb  01-what-is-ml.md  02-ml-vs-rules.md  03-supervised-ml.md  04-crisp-dm.md  05-model-selection.md  06-environment.md  07-numpy.md  08-linear-algebra.md  09-pandas.md  10-summary.md  README.md  homework.md  hw01.ipynb
02-regression/: 01-car-price-intro.md  01_homework.ipynb  02-data-preparation.md  03-eda.md  04-validation-framework.md  05-linear-regression-simple.md  06-linear-regression-vector.md  07-linear-regression-training.md  08-baseline-model.md  09-rmse.md  10-car-price-validation.md  11-feature-engineering.md  12-categorical-variables.md  13-regularization.md  14-tuning-model.md  15-using-model.md  16-summary.md  17-explore-more.md  README.md  homework.md  hw-02-regression.ipynb  motivation_play_book.ipynb  notebook.ipynb  regression with generated comments.py  regression_class.ipynb  regression_class.py  regression_practice_power_consumption.ipynb
03-classification/: 01-churn-project.md  02-data-preparation.md  03-validation.md  (+18 more)
10-kubernetes/workshop/service/: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  test.py
(+736 files in other folders)
